--- a/移动端适配/适配方案.md
+++ b/移动端适配/适配方案.md
@@ -1,3 +1,8 @@
 移动端的适配方案，建议使用淘宝的flexiable, 配合着px2rem使用。但是问题还是用的。
 
 1. 安卓设备dpr都设为1，使得1px的border显得依旧很粗
+2. 如何页面里使用了iframe，iframe里的字体大小会受到影响
+3. 在使用了js控制高度的情况，需要自己去适配不同size下的高度
+
+几个疑问:
+一开始在还未引入flexiable时，我们根据sketch里的图，
