--- a/移动端适配/适配方案.md
+++ b/移动端适配/适配方案.md
@@ -1,8 +1,61 @@
-移动端的适配方案，建议使用淘宝的flexiable, 配合着px2rem使用。但是问题还是用的。
+## 移动端的适配方案
+
+建议使用淘宝的flexiable, 配合着px2rem使用。但是问题还是用的。
 
 1. 安卓设备dpr都设为1，使得1px的border显得依旧很粗
-2. 如何页面里使用了iframe，iframe里的字体大小会受到影响
+2. 如果页面里使用了iframe，iframe里的字体大小可能会受到影响
 3. 在使用了js控制高度的情况，需要自己去适配不同size下的高度
 
-几个疑问:
-一开始在还未引入flexiable时，我们根据sketch里的图，
+几个现象的解释:
+
+## 一开始在还未引入flexiable
+
+我们根据sketch里的图，所有size都是按照750*1340px的标准iphone6的大小。由于一般情况我们通常将meta设为
+```
+ <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0"/>
+```
+而此时device-width 为375，所以写的页面大小时，总是会将设计稿的尺寸 / 2,来设置大小。此时发现我们写的和视觉稿一致。
+
+ 
+## 使用了flexiable 
+
+iphone6设备的meta viewport 被设为
+
+```
+<meta name="viewport" content="initial-scale=0.5, maximum-scale=0.5, minimum-scale=0.5, user-scalable=no">
+```
+视觉窗口的原始大小为 device-width * devicePixelRatio.
+我们写的页面尺寸与设计稿完全一致，而由于将scale设为了0.5，所以，相当于将页面等比缩放了0.5。使设计稿和页面显示一致。
+
+
+## 使用js去适应不同设备的高度
+
+比如在iphone6中某元素， 宽度100%， 高度为100px是刚好的大小，那么在安卓和iphone6p等其他设备里该如何去调整？
+
+一开始考虑这个问题时，我总是会把这个大小的调整和不同设备屏幕的 devicePixelRatio 去建立联系当然结果是与想要的越离越远。
+比如把原来的高度设为h0, 换到iphone6p时，大小应该调整为， h0 / devicePixelRatio(p6) * devicePixelRatio(p6p); 
+额，问题大到飞起。
+现在建立以下分析：
+！(此时 <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0"/>)
+
+iphone6 宽度100%时，实际元素宽度375px,此时高度为100px, 而在其他设备时 通过document.body.clientWidth 去取得实际宽度, 结果也就是个简单的比例问题。
+设元素宽度为100%， w1 / w2 = h1 / h2, h2 = h1 * w2 / w1, h2 = 100 * document.body.clientWidth / 375;
+
+
+注意以下情况,在不同meta情况下，screen始终不变，忠实的显示屏幕的信息。而window.innerWith, document.body.clientWidth却变了。我们通常需要都是文档大小，而不是设备大小。
+
+```
+  <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0"/>
+  window.innerWidth  //375
+  screen.width //375
+  document.body.clientWidth //375
+
+```
+```
+<meta name="viewport" content="initial-scale=0.5, maximum-scale=0.5, minimum-scale=0.5, user-scalable=no">
+window.innerWidth //750
+screen.width // 375
+document.body.clientWidth //750
+```
+
+
