--- a/japanese/造句.md
+++ b/japanese/造句.md
@@ -1,5 +1,8 @@
-# 造句联系record
+# 造句练习record
 ### 私は日本へ遊びに行きたいです。
 我想去日本玩。语法点 に 表示目的，へ　表示要去的目的地。 行きます　＝＞行きたいです　想要
 
-### 
+### あなたと一緒にいたい
+あなたとすど一緒にいたい
+
+私はあなと一緒で楽しかっだ
